--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <script type="text/javascript"> (function() { var css = document.createElement('link'); 
+      css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; 
+      css.rel = 'stylesheet'; 
+      css.type = 'text/css'; 
+      document.getElementsByTagName('head')[0].appendChild(css); })(); 
+  </script> -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
